--- a/style/style.css
+++ b/style/style.css
@@ -51,12 +51,17 @@ nav ul {
 nav ul li {
     list-style: none;
     padding: .5rem;
+    text-transform: uppercase;
 }
 
 nav ul li:hover {
     border: 2px solid gray;
     border-radius: 10px;
     cursor: pointer;
+}
+
+.b-menu {
+    display: none;
 }
 
 #main {
@@ -117,6 +122,7 @@ form label {
     width: 100%;
     padding: .4rem;
     border: none;
+    border-radius: 5px;
     background-color: rgba(237, 239, 242, 1);
 }
 
@@ -128,6 +134,7 @@ form label {
     width: 70%;
     padding: .4rem;
     border: none;
+    border-radius: 5px;
     background-color: rgba(237, 239, 242, 1);
 }
 
@@ -162,6 +169,7 @@ hr {
     width: 40%;
     padding: .4rem;
     border: none;
+    border-radius: 5px;
     background-color: rgba(237, 239, 242, 1);
 }
 
@@ -174,6 +182,7 @@ hr {
     width: 100%;
     color: aliceblue;
     border: none;
+    border-radius: 5px;
     padding: .7rem;
     background-color: rgba(3, 142, 125, 1);
 }
@@ -199,61 +208,70 @@ hr {
     padding: 3rem;
     float: right;
 }
-.subscription{
+
+.subscription {
     margin: 1rem auto;
 }
-.subscription span{
+
+.subscription span {
     font-size: 4em;
 
 }
-.side-span sup{
+
+.side-span sup {
     font-size: .5em;
 }
-.side-span sub{
+
+.side-span sub {
     font-size: .3em;
 }
 
-.side-span strong{
+.side-span strong {
     font-size: 1em;
     font-weight: 100;
     margin-left: 5px;
 }
-.side-span{
+
+.side-span {
     margin-bottom: 1rem;
 }
 
 .sub-1 {
-    margin-top: 1rem ;
+    margin-top: 1rem;
 }
-.clients{
+
+.clients {
     display: inline-flex;
     gap: .5rem;
     margin-bottom: 1rem;
 }
 
-.clients img{
+.clients img {
     color: white;
 }
 
-.need p{
+.need p {
     margin-bottom: 1rem;
 }
+
 .need a {
     color: white;
     /* text-decoration: none; */
 }
 
-.best p{
+.best p {
     font-style: italic;
     margin-bottom: 1rem;
     padding: .5rem;
 }
-.kirk{
+
+.kirk {
     display: inline-flex;
     align-items: center;
     gap: .5rem;
 }
-footer{
+
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -261,9 +279,65 @@ footer{
     margin: 0 auto;
 }
 
+@media (max-width: 480px) {
+
+    .b-menu {
+        display: block;
+        color: black;
+        font-size: 2rem;
+        cursor: pointer;
+    }
+
+    ul{
+        /* display: none; */
+        position: fixed;
+        left: -10px;
+        right: 10px;
+        top: 4rem;
+        padding: 1rem;
+        flex-direction: column;
+        width: 100%;
+        z-index: 1;
+        /* z-index: auto; */
+        text-align: center;
+        transition: .3s;
+        background-color: rgba(17, 121, 191, 1);
+    }
+
+    nav ul li:hover {
+        border: 2px solid rgb(251, 251, 251);
+        border-radius: 10px;
+        cursor: pointer;
+    }
+
+
+    /* form media query */
+
+    .grid-col-span-2 {
+        grid-column: span 2;
+    }
+
+    .form-container {
+        display: grid;
+        gap: 2rem;
+        grid-template-areas: repeat(3, 1fr);
+        justify-content: space-between;
+        /* border: 2px solid orangered;  */
+        margin: 1rem auto;
+        margin-left: 5rem;
+        box-shadow: rgba(0, 0, 0, 0.05);
+
+    }
+
+    .side-div {
+        grid-row-start: 3;
+        grid-column-start: 1;
+        grid-column-end: 2;
+    }
 
 
 
 
+}
 
-
+@media (max-width: 768px) {}
